tests/paczka1/small_fuzzy/58856280.err
Error in line 1: 0fkfv4 A834 46,6
Error in line 13: 0fkfv4 S666 43,7
